<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main">个人记账薄</string>
    <string name="app_name">个人记账薄</string>
    <string name="login">系统登录</string>
    <string name="addoutaccount">新增支出</string>
    <string name="addinaccount">新增收入</string>
    <string name="outaccountinfo">我的支出</string>
    <string name="inaccountinfo">我的收入</string>
    <string name="showinfo">数据管理</string>
    <string name="sysset">系统设置</string>
    <string name="accountflag">收支便签</string>
    <string name="infomanage">收支管理</string>
    <string name="flagmanage">便签管理</string>
    <string name="action_settings">Settings</string>
    <string name="chushihua">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="plusOrminus">±</string>
    <string name="mod">%</string>
    <string name="daoshu">1/x</string>
    <string name="decimalpoint">.</string>
    <string name="square">x²</string>
    <string name="radicals">√x</string>
    <string name="backspace">←</string>
    <string name="clear">C</string>
    <string name="ce">CE</string>

</resources>