<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/zlzsam"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="5"
        >
    <EditText 
        android:id="@+id/edittext2_show"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:gravity="right|center_vertical"
        android:layout_marginTop="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginLeft="4dip"
        android:cursorVisible="false"
        android:editable="false"
        android:background="#000000"
        android:text="@string/chushihua"
        android:textSize="40sp"
        android:textColor="@color/snow"
        android:singleLine="true"
        />       
   </LinearLayout>
        
       <LinearLayout 
           android:id="@+id/mylinerow0"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3"
           >
           
           <Button 
               android:id="@+id/markone"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="22sp"
               android:text="@string/clear"
               />
           
           <Button 
               android:id="@+id/marktwo"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="22sp"
               android:text="@string/ce"
               />
           
           <Button 
               android:id="@+id/markthree"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/square"
               />
           
           <Button 
               android:id="@+id/markfour"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/radicals"
               />
       </LinearLayout >
       
       <LinearLayout 
           android:id="@+id/mylinerow1"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3"
           >
           
           <Button 
               android:id="@+id/markfive"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/backspace"
               />
           
           <Button 
               android:id="@+id/marksix"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/plusOrminus"
               />
           
           <Button 
               android:id="@+id/markseven"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/daoshu"
               />
           
           <Button 
               android:id="@+id/markeight"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/divide"
               />
       </LinearLayout> 
       
       <LinearLayout 
           android:id="@+id/mylinerow2"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3"
           >
           <Button 
               android:id="@+id/btnseven"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/seven"
               />
           
           <Button 
               android:id="@+id/btneight"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/eight"
               />
           
           <Button 
               android:id="@+id/btnnine"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/nine"
               />
           
           <Button 
               android:id="@+id/marknine"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/multiply"
               />
       </LinearLayout>
       
       <LinearLayout 
           android:id="@+id/mylinerow3"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3"
           >
           <Button 
               android:id="@+id/btnfour"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/four"
               />
           
           <Button 
               android:id="@+id/btnfive"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/five"
               />
           
           <Button 
               android:id="@+id/btnsix"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/six"
               />
           
           <Button 
               android:id="@+id/markten"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/minus"
               />
       </LinearLayout>
       
       <LinearLayout 
           android:id="@+id/mylinerow4"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3"
           >
           <Button 
               android:id="@+id/btnone"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/one"
               />
           
           <Button 
               android:id="@+id/btntwo"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/two"
               />
           
           <Button 
               android:id="@+id/btnthree"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/three"
               />
           
           <Button 
               android:id="@+id/markeleven"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:layout_weight="2"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle3"
               android:textSize="25sp"
               android:text="@string/add"
               />
       </LinearLayout> 
       
       <LinearLayout  
           android:id="@+id/mylinerow5"
           android:layout_width="fill_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="3">
           <Button 
               android:id="@+id/btnzero"
               android:layout_width="0dp"
               android:layout_height="fill_parent"
               android:layout_weight="2" 
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"        
               android:textSize="25sp"
               android:text="@string/zero"
               />
           
           <Button 
               android:id="@+id/marktwelve"
               android:layout_width="0dp"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:textColor="@color/snow"
               android:background="@drawable/buttonstyle"
               android:textSize="25sp"
               android:text="@string/decimalpoint"
               />

           <Button
               android:id="@+id/markthreeteen"
               android:layout_width="0dp"
               android:layout_height="fill_parent"
               android:layout_weight="1"
               android:background="@drawable/buttonstyle2"
               android:text="@string/equal"
               android:textColor="@color/snow"
               android:textSize="25sp" />

       </LinearLayout>     
</LinearLayout>